# graphic-computing-linux

./: .gitignore  CMakeLists.txt  README.md
scripts/: start.sh
shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: main.cpp
src/camera/: camera.cpp  camera.h
src/mesh/: mesh.cpp  mesh.h
src/shader/: shader.cpp  shader.h
src/shaders/: fragment_shader.glsl  vertex_shader.glsl
src/texture/: texture.cpp  texture.h
src/window/: window.cpp  window.h
